fixed text spacing

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -42,7 +42,7 @@ img {
 
 h1 {
     font-size: 25rem;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.15rem;
 }
 
 h2{
